--- a/app/src/main/res/layout/user_list_item.xml
+++ b/app/src/main/res/layout/user_list_item.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
 
-    tools:context=".HomeActivity">
+    tools:context=".ui.HomeActivity">
 
     <ImageView
         android:id="@+id/img_userprofile"
